crates/math-core/tests/snapshots/wiki_test__wiki027.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "s_k \\equiv 0 \\pmod{m}"
---
<math>
    <msub>
        <mi>s</mi>
        <mi>k</mi>
    </msub>
    <mo>≡</mo>
    <mn>0</mn>
    <mspace width="0.44444445em"/>
    <mo stretchy="false">(</mo>
    <mrow><mspace/><mi>mod</mi></mrow>
    <mspace width="0.33333334em"/>
    <mi>m</mi>
    <mo stretchy="false">)</mo>
</math>
