crates/math-core/tests/snapshots/wiki_test__wiki028.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\gcd(m, n), \\operatorname{lcm}(m, n)"
---
<math>
    <mo lspace="0" rspace="0">gcd</mo>
    <mo stretchy="false">(</mo>
    <mi>m</mi>
    <mo>,</mo>
    <mi>n</mi>
    <mo stretchy="false">)</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">lcm</mo>
    <mo stretchy="false">(</mo>
    <mi>m</mi>
    <mo>,</mo>
    <mi>n</mi>
    <mo stretchy="false">)</mo>
</math>
