crates/math-core/tests/snapshots/wiki_test__wiki033.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\times, \\div, \\divideontimes, /, \\backslash"
---
<math>
    <mo lspace="0" rspace="0">×</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">÷</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋇</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">/</mo>
    <mo>,</mo>
    <mo>\</mo>
</math>
