crates/math-core/tests/snapshots/wiki_test__wiki037.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\circleddash, \\circledcirc, \\circledast"
---
<math>
    <mo lspace="0" rspace="0">⊝</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⊚</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⊛</mo>
</math>
