crates/math-core/tests/snapshots/wiki_test__wiki038.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\{ \\}, \\text\\O \\empty \\emptyset, \\varnothing"
---
<math>
    <mo stretchy="false">{</mo>
    <mo stretchy="false">}</mo>
    <mo>,</mo>
    <mtext>Ø</mtext>
    <mrow><mspace/><mi>∅︀</mi></mrow>
    <mrow><mspace/><mi>∅︀</mi></mrow>
    <mo>,</mo>
    <mi>∅</mi>
</math>
