crates/math-core/tests/snapshots/wiki_test__wiki039.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\in, \\notin \\not\\in, \\ni, \\not\\ni"
---
<math>
    <mo lspace="0" rspace="0">∈</mo>
    <mo>,</mo>
    <mo lspace="0">∉</mo>
    <mo>∉</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">∋</mo>
    <mo>,</mo>
    <mo>∋</mo>
</math>
