crates/math-core/tests/snapshots/wiki_test__wiki042.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\cup, \\Cup, \\sqcup, \\bigcup, \\bigsqcup, \\uplus, \\biguplus"
---
<math>
    <mo lspace="0" rspace="0">∪</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋓</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⊔</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋃</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⨆</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⊎</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⨄</mo>
</math>
